--- a/src/main/webapp/WEB-INF/layouts/standard.xhtml
+++ b/src/main/webapp/WEB-INF/layouts/standard.xhtml
@@ -1,14 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-<f:view contentType="text/html" xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns:h="http://java.sun.com/jsf/html"
+	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:sec="http://www.springframework.org/security/tags"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:lbm="http://www.logbookmanager.com/faces"
 	xmlns:faces="http://www.springframework.org/tags/faces">
+<f:view>
 	<h:head>
 		<base
 			href="#{request.requestURL.substring(0, request.requestURL.length() - request.requestURI.length())}#{request.contextPath}/" />
@@ -43,83 +43,83 @@
 			widgetVar="fullPageLayoutWidget" gutter="0">
 			<p:layoutUnit id="top" position="north" gutter="0">
 				<div id="layout-top">
-					<span class="title"><span id="site-title">#{resourceBundle['site.title']}</span></span>
-					<span class="right"><span id="logout-button"> <p:button
-								id="logoutButton" outcome="logout" value="Logout"
-								rendered="#{request.isUserInRole('ROLE_GUESTUSER')}"
-								ajax="false">
-								<f:param name="logout" value="1" />
-							</p:button>
-					</span> </span> <span class="right"><span id="login-button"> 
-					
-					<p:commandButton 
-								id="topLoginButton" 
-								value="login" 
-								ajax="false" 
-								onclick="PF('loginDialog').show();"
-								type="button"
-								rendered="#{!request.isUserInRole('ROLE_GUESTUSER')}"
-								/>
-							
-					</span> </span>
-				</div>
-			</p:layoutUnit>
+					<h:form id="topLoginLogoutForm">
 
-		<h:outputScript>
-			$(function() {
-				// change the action of the form to use Spring Security Login Target
-				$('#logoutButton').on('click', function() {
-	     			window.open('#{request.contextPath}#{request.servletPath}/logout','_self');
-	     		});
-			});
-		</h:outputScript>
+						<span class="title"><span id="site-title">#{resourceBundle['site.title']}</span></span>
+
+						<span class="right"> 
+							<span id="logout-button"> 
+								<p:commandButton
+									id="topLogoutButton" value="logout" ajax="false"
+									onclick="window.open('#{request.contextPath}#{request.servletPath}/logout','_self');"
+									type="button"
+									rendered="#{request.isUserInRole('ROLE_GUESTUSER')}" />
+							</span>
+						</span>
+						
+						<span class="right">
+							<span id="login-button"> 
+								<p:commandButton
+									id="topLoginButton" value="login" ajax="false"
+									onclick="PF('loginDialog').show();" type="button"
+									rendered="#{!request.isUserInRole('ROLE_GUESTUSER')}" />
+
+							</span> 
+						</span>
+					</h:form>
+				</div>
+
+			</p:layoutUnit>
 			<p:layoutUnit id="left" position="west" size="300" resizable="false"
 				closable="true" collapsible="true" header="Options" minSize="200">
-				<p:accordionPanel>
-					<p:tab title="Menu 1">
-						<br />
-						<p:calendar mode="inline" navigator="none" />
-						<br />
-					</p:tab>
 
-					<p:tab title="Menu 2">
-						<h:outputText value="Menu 2 Content" />
-					</p:tab>
+				<h:form id="leftAccordionMenu">
+					<p:accordionPanel>
+						<p:tab title="My Dives">
+							<br />
+							<p:calendar mode="inline" navigator="none" />
+							<br />
+						</p:tab>
 
-					<p:tab title="Menu 3">
-						<h:outputText value="Menu 3 Content" />
-					</p:tab>
-				</p:accordionPanel>
+						<p:tab title="My Kit">
+							<h:outputText value="Menu 2 Content" />
+						</p:tab>
+
+						<p:tab title="Dive Feeds">
+							<h:outputText value="Menu 3 Content" />
+						</p:tab>
+					</p:accordionPanel>
+				</h:form>
 			</p:layoutUnit>
 
 			<p:layoutUnit id="right" position="east" size="250" header="Gallery"
 				resizable="true" closable="true" collapsible="true">
+				<h:form id="rightLightBox">
+					<p:lightBox style="text-align:center;margin-top:20px;">
+						<h:outputLink value="#{request.contextPath}/images/nature1.jpg"
+							title="Nature 1" style="margin-bottom:5px;">
+							<h:graphicImage value="/images/nature1_small.jpg" />
+						</h:outputLink>
 
-				<p:lightBox style="text-align:center;margin-top:20px;">
-					<h:outputLink value="#{request.contextPath}/images/nature1.jpg"
-						title="Nature 1" style="margin-bottom:5px;">
-						<h:graphicImage value="/images/nature1_small.jpg" />
-					</h:outputLink>
+						<h:outputLink value="#{request.contextPath}/images/nature2.jpg"
+							title="Nature 2" style="margin-bottom:2px;">
+							<h:graphicImage value="/images/nature2_small.jpg" />
+						</h:outputLink>
 
-					<h:outputLink value="#{request.contextPath}/images/nature2.jpg"
-						title="Nature 2" style="margin-bottom:2px;">
-						<h:graphicImage value="/images/nature2_small.jpg" />
-					</h:outputLink>
+						<h:outputLink value="#{request.contextPath}/images/nature3.jpg"
+							title="Nature 3" style="margin-bottom:2px;">
+							<h:graphicImage value="/images/nature3_small.jpg" />
+						</h:outputLink>
 
-					<h:outputLink value="#{request.contextPath}/images/nature3.jpg"
-						title="Nature 3" style="margin-bottom:2px;">
-						<h:graphicImage value="/images/nature3_small.jpg" />
-					</h:outputLink>
+						<h:outputLink value="#{request.contextPath}/images/nature4.jpg"
+							title="Nature 4" style="margin-bottom:2px;">
+							<h:graphicImage value="/images/nature4_small.jpg" />
+						</h:outputLink>
+					</p:lightBox>
 
-					<h:outputLink value="#{request.contextPath}/images/nature4.jpg"
-						title="Nature 4" style="margin-bottom:2px;">
-						<h:graphicImage value="/images/nature4_small.jpg" />
-					</h:outputLink>
-				</p:lightBox>
-
-				<p:commandButton id="basic" value="Show Dialog"
-					onclick="PF('dlg').show();" type="button" style="margin-top:10px" />
-
+					<p:commandButton id="basic" value="Show Dialog"
+						onclick="PF('dlg').show();" type="button" style="margin-top:10px" />
+				</h:form>
 			</p:layoutUnit>
 
 			<p:layoutUnit id="bottom" position="south" size="50">
