added HtmlUnitDriver login on welcome page

--- a/src/main/webapp/WEB-INF/layouts/standard.xhtml
+++ b/src/main/webapp/WEB-INF/layouts/standard.xhtml
@@ -136,8 +136,7 @@
 
 			<p:layoutUnit id="center" position="center">
 				<div id="main-content">
-					<lbm:menu />
-
+					<lbm:menu id="contentMenuBar" />
 					<ui:insert name="content" />
 				</div>
 			</p:layoutUnit>
